--- a/server/package.json
+++ b/server/package.json
@@ -13,5 +13,8 @@
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "pg": "^8.7.3"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.16"
   }
 }
